Fixed all spelling mistakes

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="saveforlater.js"></script>
   </head>
   <body>
-    <!--this is our navigtion bar with all our socials linked to nothing since we have no socials-->
+    <!--this is our navigation bar with all our socials linked to nothing since we have no socials-->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid bar">
         <a class="navbar-brand" href="#">
@@ -118,7 +118,7 @@
             <h5 class="card-title">Social Media</h5>
             <p class="card-text">
               Follow us on Instagram,Twitter,Facebook and Twitch.This is where
-              we post awesome pics like the ones you see uptop and more.
+              we post awesome pics like the ones you see above and more.
             </p>
           </div>
         </div>
