--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
 
-    <!--first up are our sliders this next line helps the slide move expecially the data-bs-ride -->
+    <!--first up are our sliders this next line helps the slide move especially the data-bs-ride -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators"> <!--this is to help our browser know the order of the slides-->
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -60,7 +60,7 @@
       <img src="https://images6.alphacoders.com/109/1098390.jpg" class="d-block w-100 c-img" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>Games!</h1>
-        <p>We Have All Your Favourates From God OF WAR, Call of Duty and Online Games Like PUBG
+        <p>We Have All Your Favorites From God OF WAR, Call of Duty and Online Games Like PUBG
           Gamers Are All About Playing Games And We Are All About that As WE are Also Gamers
           <em> Again Your One Stop Shop To Your Gaming Addiction</em></p>
       </div>
@@ -70,11 +70,11 @@
       <div class="carousel-caption d-none d-md-block">
         <h1>Quotes!</h1>
         <p>We Are Still New So Hold Those Troll Comments For Later
-          This is Purely For Games Not Anime , Memes or Car Enthusiasts We Are Stricty For Games
+          This is Purely For Games Not Anime , Memes or Car Enthusiasts We Are Strictly For Games
           <em>One Last Time We Are Your One Stop Shop For Your Gaming Addiction</em></p>
       </div>
     </div>
-  </div> <!--the infomation below represents the buttons that moves the slide where the buttons go and which direction they should go when pushed -->
+  </div> <!--the information below represents the buttons that moves the slide where the buttons go and which direction they should go when pushed -->
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
@@ -86,7 +86,7 @@
 </div>
 <br>
 
-<!--below are buttons with different background colours written in a bootstrap format so bootstrap knows we want buttons-->
+<!--below are buttons with different background colors written in a bootstrap format so bootstrap knows we want buttons-->
 <nav class="navbar bg-body-tertiary nav-box">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1 genre">
@@ -106,7 +106,7 @@
 <div class="space"></div> <!--this is my spacer witch helps me make space between content-->
 <br>
 
-<!--this is navigation bar that is meant to send user to the relavent game purchase websites but they make good decoration-->
+<!--this is navigation bar that is meant to send user to the relevant game purchase websites but they make good decoration-->
 <ul class="nav justify-content-center bar">
   <li class="nav-item">
     <a class="nav-link active disabled" aria-current="page">PS5</a>
@@ -128,15 +128,15 @@
 <div class="clearfix">
   <img src="https://getwallpapers.com/wallpaper/full/4/9/a/722240-cool-game-controller-wallpaper-1920x1080-photos.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
     <ul>
-        <h2 class="head1">We have e Received Reviews from your Favourate Gamers</h2>
+        <h2 class="head1">We have e Received Reviews from your Favorite Gamers</h2>
         <li>Ninja (Tyler Blevins)</li>
         <li>PewDiePie (Felix Kjellberg)</li>
         <li>Preston (Preston Arsement)</li>
         <li>Markiplier (Mark Fischbach)</li>
     </ul>
-    <p>Gamers all around are interested in our website because we cater to all player weather they are noobs or pros
+    <p>Gamers all around are interested in our website because we cater to all player weather they are Noobs or pros
       we are here for you.Because we are a fairly new website we appreciate all feedback well all except from <b>TROLLS</b>
-      you guys can keep your comments to yourselfs as we are a friendly community even thought we are always swearing each other but that is how gamers express love.
+      you guys can keep your comments to yourself's as we are a friendly community even thought we are always swearing each other but that is how gamers express love.
     </p>
 </div>
 <br>
@@ -151,7 +151,7 @@
     <div class="card-body">
       <h5 class="card-title">Forza Horizo 5</h5>
       <p class="card-text">Forza Horizon is a 2012 racing video game developed by Playground Games and published by Microsoft Studios for the Xbox 360 on 23 October 2012. The game is the fifth instalment of the Forza series.</p>
-      <p class="card-text"><small class="text-body-secondary">Realease Date: November 9, 2021</small></p>
+      <p class="card-text"><small class="text-body-secondary">Release Date: November 9, 2021</small></p>
     </div>
   </div>
   <div class="card">
@@ -159,7 +159,7 @@
     <div class="card-body">
       <h5 class="card-title">The Last Of Us 2</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-body-secondary">Realease Date: June 19 2023</small></p>
+      <p class="card-text"><small class="text-body-secondary">Release Date: June 19 2023</small></p>
     </div>
   </div>
   <div class="card">
@@ -167,7 +167,7 @@
     <div class="card-body">
       <h5 class="card-title">Resident Evil 4 Remastered</h5>
       <p class="card-text">Resident Evil 4[b] is a survival horror game developed and published by Capcom for the GameCube in 2005. Players control special agent Leon S. Kennedy who is on a mission to rescue the US president's daughter, Ashley Graham, who has been kidnapped by a religious cult in rural Spain.</p>
-      <p class="card-text"><small class="text-body-secondary">Realease Date; March 24, 2023</small></p>
+      <p class="card-text"><small class="text-body-secondary">Release Date; March 24, 2023</small></p>
     </div>
   </div>
 </div>
@@ -184,8 +184,8 @@
 <br>
 <div class="space"></div>
 
-<!--this is our table and information is pretty straight forward it is a regular table exept with the scope variable which helps us know which tabel we want-->
-<h1 class="he">Game Recomendations</h1>
+<!--this is our table and information is pretty straight forward it is a regular table except with the scope variable which helps us know which tabel we want-->
+<h1 class="he">Game Recommendations</h1>
 <table class="table"> 
   <thead class="table-dark">
     <tr>
@@ -235,7 +235,7 @@
 <br>
 <!--this is our radio button form-->
          <div class="radio">         
-          <h2 class="p4">Choose your Prefered Gaming Status</h2>
+          <h2 class="p4">Choose your Preferred Gaming Status</h2>
             <input type="radio" name="size" id="Online">
             <label for="Online">Online</label>
             <Input type="radio" name="size" id="Offline"></Input>
